--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Quelles est la durée et l'approche pédagogique de vos différentes  formations? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p align="justify">
-                  Nos différentes formations s'inscrivent dans le cadre de <strong>la formation continue</strong>. Elles ont pour objectif premier de <strong>renforcer les capacités techniques des employés de nos clients</strong>.Elles s'adressent essentiellement aux professionnels de l'informatique.Elles sont <strong>certifiantes et peuvent être personnaliser</strong> .
+                  Nos différentes formations s'inscrivent dans le cadre de <strong>la formation continue</strong>. Elles ont pour objectif premier de <strong>renforcer les capacités techniques des employés de nos clients</strong>.Elles s'adressent essentiellement aux professionnels de l'informatique et varient de trois (3) jours à trois (3) semaine maximum.Certaines sont <strong>certifiantes et peuvent être personnaliser</strong> .
                 </p>
               </div>
             </li>
