--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
         <div class="row content">
           <div class="col-lg-6">
             <p align="justify">
-              <strong>SOLUHCTEK</strong> est un intégrateur ,<strong>créé en 2017</strong> et ,  spécialisé dans <strong>le Conseil en Systèmes d’Information,
-            l’Intégration de solutions clé en<br> main</strong> répondant aux besoins de Votre entreprise.
+              <strong>SOLUHCTEK</strong> est un intégrateur <strong>créé en 2017</strong> et  spécialisé dans <strong> le Conseil en Systèmes d’Information,
+            l’Intégration de solutions clé en<br> main</strong> répondant aux besoins de votre entreprise.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> <strong>Le professionalisme</strong> dont nous faisons preuve;</li>
@@ -162,7 +162,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p align="justify">
-              positionnent notre intégrateur comme <strong> un partenaire technique fiable</strong> pour les différents besoins de vos structures.Par ailleurs,notre enjeu est aussi de <strong> pourvoir nos clients en ressources humaines compétentes</strong>,via nos formations continues, et en phase avec les innovations et évolutions technique du  secteur informatique.
+              positionnent notre intégrateur comme <strong> un partenaire technique fiable</strong> pour les différents besoins de vos structures. Par ailleurs, notre enjeu est aussi de <strong> pourvoir nos clients en ressources humaines compétentes</strong> via nos formations continues, et en phase avec les innovations et évolutions techniques du  secteur informatique.
             </p>
             <a href="#team" class="btn-learn-more">Notre équipe</a>
           </div>
@@ -180,9 +180,9 @@
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
 
             <div class="content">
-              <h3>SOLUHCTEK <strong>spécialiste de l'intégration de systèmes informatique.</strong></h3>
+              <h3>SOLUHCTEK <strong>spécialiste de l'intégration des systèmes informatiques.</strong></h3>
               <p>
-                Notre approche est basée sur trois grands axes ayant pour but la conception de solutions adaptées à votre structure.
+                Notre approche est basée sur trois grands axes ayant pour but la conception des solutions adaptées à votre structure.
               </p>
             </div>
 
@@ -201,7 +201,7 @@
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed"><span>02</span>Design &amp; Offres <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      Notre proposition de sevices et/ou  solutions IT pour votre entreprise reste flexible,accessible et surtout adaptés à vos besoins.
+                      Notre proposition de sevices et/ou  solutions IT pour votre entreprise restent flexibles, accessibles et surtout adaptées à vos besoins.
                     </p>
                   </div>
                 </li>
@@ -210,7 +210,7 @@
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed"><span>03</span>Mise en oeuvre<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
                     <p align="justify">
-                      Notre politique  des gestion IT va de la mise en oeuvre de nouveaux logiciels,matériels et systèmes de données en passant par la maintenance et une assistance technique de qualité.
+                      Notre politique  de gestion IT va de la mise en oeuvre de nouveaux logiciels, matériels et systèmes de données en passant par la maintenance et une assistance technique de qualité.
                     </p>
                   </div>
                 </li>
@@ -382,9 +382,9 @@
                   <p align ="justify">
                     Nos <strong>solutions et services</strong> sont mises en oeuvre par <strong>une équipe chevronée</strong> et couvrent <strong>une multitude d'attentes au sein de vos structures</strong> :<br>
                     <ul>
-                      <li>L'Audit,le conseil &amp;l'Optimisation;</li>
-                      <li>Les réseaux,sécurité &amp; Telecom;</li>
-                      <li>Les Infrastructure serveurs;</li>
+                      <li>L'Audit , le conseil &amp; l'Optimisation;</li>
+                      <li>Les réseaux , sécurité &amp; Telecoms;</li>
+                      <li>Les Infrastructures serveurs;</li>
                       <li>La Consolidation &amp; la virtualisation;</li>
                       <li>La Sauvegarde &amp; le Stockage;</li>
                       <li>Le Courant faible (Vidéo surveillance,contrôle d'accès,gestion de temps de présence...) ;</li>
@@ -392,8 +392,8 @@
                       <li>Les logiciels (supervision,GED,messagerie...);</li>
                       <li>L'Infogérance;</li>
                       <li>La Cybersécurité;</li>
-                      <li>La monétique &amp;la bureautique ;</li>
-                      <li>La Datacenter ;</li>
+                      <li>La monétique &amp; la bureautique ;</li>
+                      <li>Le Datacenter ;</li>
                       <li>La visioconférence et;</li>
                       <li>Le call center.</li>
                     </ul>
@@ -414,7 +414,7 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
             <h3>Parlons de votre projet</h3>
-            <p> Intégrer une solution n’est pas seulement un projet technique, c’est avant tout une démarche pour trouver le meilleur équilibre entre les besoins métier, les capacités du logiciel et les développements spécifiques qui vous sied.</p>
+            <p> Intégrer une solution n’est pas seulement un projet technique, c’est avant tout une démarche pour trouver le meilleur équilibre entre les besoins métiers, les capacités du logiciel et les développements spécifiques qui vous sied.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#contact">Contactez-nous</a>
@@ -432,7 +432,7 @@
 
         <div class="section-title">
           <h2>Equipe</h2>
-          <p>Fondée sur les valeurs de <strong>professionalisme,agilité et de satisfaction clients</strong>,notre équipe connait et partage notre vision.Nos effectifs se répartissent en deux pools : <strong>le pool commercial</strong> et  <strong>le pool technique</strong> ainsi que d'un <strong>réseau de consultants senior</strong>.</p>
+          <p>Fondée sur les valeurs de <strong> professionalisme, d'agilité et de satisfaction clients </strong>, notre équipe connait et partage notre vision. Nos effectifs se répartissent en deux pools : <strong> le pool commercial</strong> et <strong>le pool technique</strong> ainsi que d'un <strong>réseau de consultants seniors</strong>.</p>
         </div>
 
         <div class="row">
@@ -821,7 +821,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>herve.obiang@soluhctek.com</p>
+                <p>contact@soluhctek.com</p>
               </div>
 
               <div class="phone">
