--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">SOLUHCTEK</a></h1>
+      <h1 class="logo me-auto"><img src="assets/img/team/logo_Soluhtek.png"/><a href="index.html"></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -821,23 +821,22 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>contact@soluhctek.com</p>
+                <p>secretariat@soluhctek.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+241 65.31.29.91 / 77.39.77.22</p>
+                <p>+241 65.03.51.31</p>
               </div>
 
-             
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1021389.7031218662!2d8.46937403519327!3d-0.1560207410039663!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x107f3b7cfc75cff5%3A0xc376d908c27283ba!2sMosqu%C3%A9e%20de%20SOTEGA!5e0!3m2!1sfr!2sga!4v1689551859932!5m2!1sfr!2sga" width="400" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15958.851429879709!2d9.4440597126149!3d0.416592863866281!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x107f3b8a5438f3ed%3A0x1c22963a907441be!2sCF83%2BJPQ%2C%20Libreville!5e0!3m2!1sfr!2sga!4v1690819847142!5m2!1sfr!2sga" width="400" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form name="beatport" action="https://formspree.io/f/mjvqkrzg" method="post"  class="formsol ">
+            <form name="beatport" action="https://formspree.io/f/xgejawez" method="post"  class="formsol ">
               <div class="row">
                 <div class="form-group col-md-12">
                   <label for="name">Votre nom et Prénom</label>
@@ -880,7 +879,7 @@
           <div class="col-lg-6">
             <h4>Inscrivez-vous à notre Newsletter</h4>
             <p>Afin de vous tenir informer sur l'actualité de nos produits,services et solutions</p>
-            <form  action="https://formspree.io/f/xnqknyal" method="post" >
+            <form  action="https://formspree.io/f/xgejawez" method="post" >
               <input type="email" name="email"><input type="submit" value="S'inscrire"><input class="rez" type="reset" value="Effacer"/>
             </form>
           </div>
@@ -899,8 +898,8 @@
               Intégrateur<br>
               de solutions<br>
               Informatiques<br><br>
-              <strong>Phone:</strong> +241 65.31.29.91<br>
-              <strong>Email:</strong>contact@soluhctek.com<br>
+              <strong>Phone:</strong>+241 65.03.51.31<br>
+              <strong>Email:</strong>secretariat@soluhctek.com<br>
             </p>
           </div>
 
